2008-Aug-26  yselkowitz

	* bin/cygport.in (cygautoreconf, cygconf, src_compile):
	Moved out; auto-inherit autotools instead.
	lib/autotools.cygclass:
	lib/Makefile.am: Added new cygclass for cygautoreconf and cygconf.

	* bin/make_etc_defaults:
	bin/prep_fonts_dir.sh:
	bin/prep_gtk2_modules.sh:
	lib/docbook.cygclass (docbook_sgml_postinst, docbook_sgml_prerm):
	(docbook_xml_postinst, docbook_xml_prerm):
	lib/ggz.cygclass (ggz_postinst):
	lib/php.cygclass (php_postinst):
	Use fully qualified paths for all commands in postinstall scripts.

2008-Aug-24  yselkowitz

	* lib/wxwidgets.cygclass: WX_VERSION is mandatory, no default value.

	* lib/berkdb.cygclass: Java and Tcl bindings are optional, depending
	on whether their respective cygclasses have already been inherited.

	* bin/cygport.in (inherited): New function.

	* lib/cmake.cygclass: NEW for cygcmake() and default src_compile().
	lib/kde4.cygclass: Call it.
	lib/opensync.cygclass: Ditto.
	lib/qt4-cmake.cygclass: Ditto.
	bin/cygport.in (cygcmake): Removed.

	* bin/dolib: Use libtool to install libtool libraries.

	* bin/cygport.in (__prepdoc): Don't default install ABOUT-NLS or INSTALL.

	* lib/berkdb.cygclass: Disable building of Java bindings.

	* lib/mono.cygclass: Remove MAKEOPTS override.

	* lib/qt3.cygclass:
	lib/qt3-qmake.cygclass:
	lib/Makefile.am:
	Move qmake code into separate qt3-qmake cygclass.

	* bin/cygport.in: Make dependency on diffstat required.

	* lib/fox-build.cygclass, lib/Makefile.am: Renamed old fox.cygclass.
	lib/fox.cygclass: Replaced with wxwidgets-style fox-config wrapper.

	* configure.in: Post-release version bump.

2008-Aug-22  yselkowitz

	* bin/cygport.in (_privclassdir): Move to $pkgdatadir/cygclass.
	lib/Makefile.am (cygclassdir): Ditto.

	* lib/Makefile.am (cygclass_DATA): Don't install gst-plugins0.8.cygclass.

	* lib/gtk2-perl.cygclass: PODs and manpages build OOTB on 1.7.
	Inter-module linking fixed in perl 5.10.0-5 and EU::D 0.300-2.
