@@ -1,5 +1,11 @@
 2008-Aug-26  yselkowitz
 
+	* bin/cygport.in (__gpg_verify, __src_prep):
+	Only warn about missing gnupg if there is a signature to verify.
+	Only verify signatures if existant; don't warn about "missing" sigs.
+	Verify signatures in PATCH_URI if existant.
+	Catch error if signature verification fails.
+
 	* bin/cygport.in (cygautoreconf, cygconf, src_compile):
 	Moved out; auto-inherit autotools instead.
 	lib/autotools.cygclass:
